<resources>
    <string name="app_name">MovieApp</string>
    <string name="search">Search…</string>
    <string name="search_title">Search</string>
    <string name="home">Home</string>
    <string name="see_all">See all</string>
    <string name="trending_movies">Trending Movies</string>
    <string name="trending_tv_shows">Trending TV Shows</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="top_rated_tv_shows">Top Rated Tv Shows</string>
    <string name="rating">Rating</string>
    <string name="runtime">Runtime \n %s</string>
    <string name="released">Released \n %s</string>
    <string name="country">Country \n %s</string>
</resources>